set the JAVA_TOOL_OPTIONS variable